@@ -11,17 +11,14 @@ import com.powsybl.dynawaltz.DynaWaltzContext;
 import com.powsybl.dynawaltz.DynaWaltzParametersDatabase;
 import com.powsybl.dynawaltz.models.buses.BusModel;
 import com.powsybl.dynawaltz.models.generators.OmegaRefGeneratorModel;
-import com.powsybl.dynawaltz.models.generators.GeneratorSynchronousModel;
 import com.powsybl.dynawaltz.models.utils.BusUtils;
 import com.powsybl.dynawaltz.xml.ParametersXml;
 import com.powsybl.iidm.network.Generator;
-import org.apache.commons.lang3.tuple.Pair;
 
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Collections;
+import java.util.List;
 
 import static com.powsybl.dynawaltz.DynaWaltzParametersDatabase.ParameterType.DOUBLE;
 import static com.powsybl.dynawaltz.DynaWaltzParametersDatabase.ParameterType.INT;
@@ -35,24 +32,21 @@ import static com.powsybl.dynawaltz.xml.DynaWaltzXmlConstants.DYN_URI;
  * dynamic model and one to connect it to the NETWORK model.
  *
  * @author Marcos de Miguel <demiguelm at aia.es>
+ * @author Laurent Issertial <laurent.issertial at rte-france.com>
  */
 public class OmegaRef extends AbstractPureDynamicBlackBoxModel {
 
     public static final String OMEGA_REF_ID = "OMEGA_REF";
     private static final String OMEGA_REF_PARAMETER_SET_ID = "OMEGA_REF";
-    private final Map<OmegaRefGeneratorModel, Integer> synchronousGenerators = new LinkedHashMap<>();
-    private final Map<BusModel, List<OmegaRefGeneratorModel>> busGeneratorListMap = new LinkedHashMap<>();
+    private final List<OmegaRefGeneratorModel> omegaRefGenerators;
 
-    public OmegaRef(List<OmegaRefGeneratorModel> synchronousGenerators) {
+    public OmegaRef(List<OmegaRefGeneratorModel> omegaRefGenerators) {
         super(OMEGA_REF_ID, OMEGA_REF_PARAMETER_SET_ID);
-        int i = 0;
-        for (OmegaRefGeneratorModel synchronousGenerator : synchronousGenerators) {
-            this.synchronousGenerators.put(synchronousGenerator, i++);
-        }
+        this.omegaRefGenerators = omegaRefGenerators;
     }
 
     public boolean isEmpty() {
-        return synchronousGenerators.isEmpty();
+        return omegaRefGenerators.isEmpty();
     }
 
     @Override
@@ -69,84 +63,49 @@ public class OmegaRef extends AbstractPureDynamicBlackBoxModel {
 
         // The dynamic models are declared in the DYD following the order of dynamic models' supplier.
         // The OmegaRef parameters index the weight of each generator according to that declaration order.
-        for (Map.Entry<OmegaRefGeneratorModel, Integer> e : synchronousGenerators.entrySet()) {
-            OmegaRefGeneratorModel generator = e.getKey();
+        int index = 0;
+        for (OmegaRefGeneratorModel generator : omegaRefGenerators) {
             double h = parDB.getDouble(generator.getParameterSetId(), "generator_H");
             double snom = parDB.getDouble(generator.getParameterSetId(), "generator_SNom");
-
-            ParametersXml.writeParameter(writer, DOUBLE, "weight_gen_" + e.getValue(), Double.toString(h * snom));
+            ParametersXml.writeParameter(writer, DOUBLE, "weight_gen_" + index, Double.toString(h * snom));
+            index++;
         }
 
-        ParametersXml.writeParameter(writer, INT, "nbGen", Long.toString(synchronousGenerators.size()));
+        ParametersXml.writeParameter(writer, INT, "nbGen", Long.toString(omegaRefGenerators.size()));
 
         writer.writeEndElement();
     }
 
-    @Override
-    public List<VarConnection> getVarConnectionsWith(Model connected) {
-        if (connected instanceof GeneratorSynchronousModel) {
-            GeneratorSynchronousModel connectedGeneratorModel = (GeneratorSynchronousModel) connected;
-            return Arrays.asList(
-                    new VarConnection("omega_grp_@INDEX@", connectedGeneratorModel.getOmegaPuVarName()),
-                    new VarConnection("omegaRef_grp_@INDEX@", connectedGeneratorModel.getOmegaRefPuVarName()),
-                    new VarConnection("running_grp_@INDEX@", connectedGeneratorModel.getRunningVarName())
-            );
-        } else if (connected instanceof OmegaRefGeneratorModel) {
-            OmegaRefGeneratorModel connectedOmegaRefGeneratorModel = (OmegaRefGeneratorModel) connected;
-            return Arrays.asList(
-                    new VarConnection("omegaRef_grp_@INDEX@", connectedOmegaRefGeneratorModel.getOmegaRefPuVarName()),
-                    new VarConnection("running_grp_@INDEX@", connectedOmegaRefGeneratorModel.getRunningVarName())
-            );
-        } else if (connected instanceof BusModel) {
-            return List.of(new VarConnection("numcc_node_@INDEX@", ((BusModel) connected).getNumCCVarName()));
-        } else {
-            throw new PowsyblException("OmegaRef can only connect to GeneratorModel and BusModel");
-        }
+    private List<VarConnection> getVarConnectionsWithOmegaRefGenerator(OmegaRefGeneratorModel connected) {
+        return connected.getOmegaRefVarConnections();
+    }
+
+    private List<VarConnection> getVarConnectionsWithBus(BusModel connected) {
+        return connected.getNumCCVarName()
+                .map(numCCVarName -> List.of(new VarConnection("numcc_node_@INDEX@", numCCVarName)))
+                .orElse(Collections.emptyList());
     }
 
     @Override
-    public List<Model> getModelsConnectedTo(DynaWaltzContext context) throws PowsyblException {
-        for (OmegaRefGeneratorModel g : synchronousGenerators.keySet()) {
-            BusModel bus = getBusAssociatedTo(g, context);
-            busGeneratorListMap.computeIfAbsent(bus, k -> new ArrayList<>()).add(g);
+    public void createMacroConnections(DynaWaltzContext context) throws PowsyblException {
+        int index = 0;
+        for (OmegaRefGeneratorModel gen : omegaRefGenerators) {
+            createMacroConnections(gen, getVarConnectionsWithOmegaRefGenerator(gen), context, MacroConnectAttribute.ofIndex1(index));
+            createMacroConnections(getBusAssociatedTo(gen, context), BusModel.class, this::getVarConnectionsWithBus, context, MacroConnectAttribute.ofIndex1(index));
+            index++;
         }
-        return Stream.concat(synchronousGenerators.keySet().stream(), busGeneratorListMap.keySet().stream())
-                .collect(Collectors.toList());
     }
 
-    private BusModel getBusAssociatedTo(OmegaRefGeneratorModel generatorModel, DynaWaltzContext context) {
+    private String getBusAssociatedTo(OmegaRefGeneratorModel generatorModel, DynaWaltzContext context) {
         Generator generator = generatorModel.getStaticId().map(staticId -> context.getNetwork().getGenerator(staticId)).orElse(null);
         if (generator == null) {
             throw new PowsyblException("Generator " + generatorModel.getLib() + " not found in DynaWaltz context. Id : " + generatorModel.getDynamicModelId());
         }
-        return context.getDynamicModelOrDefaultBus(BusUtils.getConnectableBusStaticId(generator));
+        return BusUtils.getConnectableBusStaticId(generator);
     }
 
     @Override
     public String getParFile(DynaWaltzContext context) {
         return context.getSimulationParFile();
-    }
-
-    @Override
-    public void writeMacroConnect(XMLStreamWriter writer, DynaWaltzContext context, MacroConnector macroConnector, Model connected) throws XMLStreamException {
-        if (connected instanceof OmegaRefGeneratorModel) {
-            List<Pair<String, String>> attributesConnectFrom = getAttributesConnectFrom((OmegaRefGeneratorModel) connected);
-            macroConnector.writeMacroConnect(writer, attributesConnectFrom, connected.getMacroConnectToAttributes());
-        } else if (connected instanceof BusModel) {
-            BusModel bus = (BusModel) connected;
-            for (OmegaRefGeneratorModel g : busGeneratorListMap.get(bus)) {
-                List<Pair<String, String>> attributesConnectFrom = getAttributesConnectFrom(g);
-                macroConnector.writeMacroConnect(writer, attributesConnectFrom, bus.getMacroConnectToAttributes());
-            }
-        } else {
-            throw new PowsyblException("OmegaRef can only connect to OmegaRefGeneratorModel and BusModel");
-        }
-    }
-
-    private List<Pair<String, String>> getAttributesConnectFrom(OmegaRefGeneratorModel generator) {
-        int index = synchronousGenerators.get(generator);
-        return List.of(
-                Pair.of("id1", OMEGA_REF_ID),
-                Pair.of("index1", Integer.toString(index)));
     }
 }
